<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/background">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/first_name"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_success_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text ="@string/success"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:visibility="gone"
            android:textColor ="@color/purple"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_error_firstname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text ="error"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:visibility="gone"
            android:textColor ="@color/red"/>


    </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:hint="@string/last_name"
            android:textColorHint="@color/white"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"/>

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tv_success_lastname"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:text ="@string/success"
          android:layout_marginStart="20dp"
          android:textSize="20sp"
          android:visibility="gone"
          android:textColor ="@color/purple"/>

      <androidx.appcompat.widget.AppCompatTextView
          android:id="@+id/tv_error_lastname"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:text ="@string/error"
          android:layout_marginStart="20dp"
          android:textSize="20sp"
          android:visibility="gone"
          android:textColor ="@color/red"/>



  </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_success_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text ="@string/success"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:visibility="gone"
            android:textColor ="@color/purple"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_error_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text ="error"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:visibility="gone"
            android:textColor ="@color/red"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/age"
        android:textColorHint="@color/white"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_success_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text ="@string/success"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:visibility="gone"
            android:textColor ="@color/purple"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_error_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text ="error"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:visibility="gone"
            android:textColor ="@color/red"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/active_user"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp">

        </TextView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/et_activeUsers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/deleted_users"
            android:textColor="@color/red"
            android:textSize="20sp">

        </TextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/et_deleteUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_adduser"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:text="@string/add_user"
            android:textColor="@color/white"
            android:background="@color/blue"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_removeuser"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/remove_user"
            android:textColor="@color/white"
            android:background="@color/blue"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_updateUser"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:text="@string/update_user"
            android:textColor="@color/white"
            android:background="@color/blue"/>




    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_userAdded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_added_successfully"
            android:textColor="@color/red"
            android:layout_marginStart="5dp"
            android:layout_marginTop="30dp"
            android:visibility="gone"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_userExists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_already_exists"
            android:textColor="@color/red"
            android:layout_marginStart="12dp"
            android:layout_marginTop="30dp"
            android:visibility="gone"/>

    </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_userDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_deleted_successfully"
            android:textColor="@color/red"
            android:layout_marginStart="130dp"
            android:layout_marginTop="30dp"
            android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_userNotExists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_does_not_exits"
                android:textColor="@color/red"
                android:layout_marginStart="130dp"
                android:layout_marginTop="30dp"
                android:visibility="gone"/>


        </LinearLayout>

   <LinearLayout
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/user_updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_updated_successfully"
            android:textColor="@color/red"
            android:layout_marginStart="120dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>


    </LinearLayout>





</LinearLayout>